# idps-escape

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  adbox.sh  build-adbox.sh  cleanup.sh  dev.Dockerfile  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
deployment/: README.md  guide_sids.md  integration.md
deployment/remote_monitoring/: idps-escape-port-mirroring.sh  remote_monitoring.md
deployment/suricata/: Dockerfile  suricata.yaml  suricata_installation.md
deployment/wazuh/: change_passwords.md  troubleshooting.md  wazuh_agents.md  wazuh_installation.md
docs/manual/: README.md  data_transformation.md  detector_data_structure.md  engine.md  example.md  front_end.md  glossary.md  installation.md  linux_resource.md  mtad_gat.md  overview.md  setup_and_prerequisites.md  time_series.md  use_case.md  user_guide.md
docs/traceability/: HARC.html  LARC.html  MRS.html  SRS.html  SWD.html  TRA.html  TST.html  index.html  traceability.csv
siem_mtad_gat/: ad_extension_orchestration.py  ad_orchestration.py  commons.py  data_transformer.py  settings.py
siem_mtad_gat/ad_driver/: driver.py  driver_console.py
siem_mtad_gat/ad_opensearch_extension/: ad_opensearch.json  ad_opensearch.py  ad_opensearch_extension.py  ad_opensearch_handler.py
siem_mtad_gat/config_manager/: config_manager.py
siem_mtad_gat/data_ingestion/: ad_data_ingestor.py
siem_mtad_gat/data_manager/: data_retrieval_manager.py  data_storage_manager.py  detectors.py  spot_manager.py
siem_mtad_gat/mtad_gat_pytorch/: README.md  config_manager.py  eval_methods.py  (+16 more)
(+211 files in other folders)
